# iter_tar

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/iter_tar/: __init__.py
tests/units/: test_parse_pax_headers.py
