[metadata]
name = iter_tar
version = attr: iter_tar.__version__
description = Library to iterate through a tar file
long_description = file: README.md
author = Matt Martz
author_email = matt@sivel.net
url = https://github.com/sivel/iter_tar
project_urls =
    Bug Tracker = https://github.com/sivel/iter_tar/issues
    Source Code = https://github.com/sivel/iter_tar
keywords =
    tar
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.8
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
